--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $color-white-cloud: hsl(240, 1%, 92%);
 $color-gray: hsl(220, 17%, 57%);
 $color-blue: hsl(220, 100%, 68%);
 $color-orange: hsl(31, 92%, 62%);
+$color-sea-foam-green: hsl(143, 47%, 58%);
 
 $typographic-root-font-size: 100;
 $typographic-base-font-size: 16px;
