--- a/src/assets/scss/themes/_light.scss
+++ b/src/assets/scss/themes/_light.scss
@@ -6,11 +6,11 @@
 :before {
   --color-white: #{$color-white};
   --color-primary: #{$color-blue};
-  --color-secondary: #{$color-orange};
+  --color-secondary: #{$color-sea-foam-green};
   --color-prism-background: #{$color-white-cloud};
   --color-typographic-base-font: #{$color-dark};
   --color-typographic-link-p-font: #{$color-blue};
-  --color-typographic-link-s-font: #{$color-orange};
+  --color-typographic-link-s-font: #{$color-sea-foam-green};
   --color-page-border: #{$color-white-cloud};
   --color-page-background: #{$color-white};
   --color-sidebar-border: #{$color-white-cloud};
