whole button clickable

--- a/src/components/Sidebar/Contacts/Contacts.module.scss
+++ b/src/components/Sidebar/Contacts/Contacts.module.scss
@@ -17,8 +17,6 @@
     .item {
       align-content: center;
       align-items: center;
-      border: 1px solid var(--color-contacts-border);
-      border-radius: 50%;
       display: flex;
       height: $button-height;
       justify-content: center;
@@ -33,10 +31,16 @@
       }
 
       .link {
+        align-items: center;
         border: 0;
+        border: 1px solid var(--color-contacts-border);
+        border-radius: 50%;
         color: var(--color-typographic-base-font);
         cursor: pointer;
         display: flex;
+        height: 100%;
+        justify-content: center;
+        width: 100%;
 
         &:hover,
         &:focus {
